force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/PBS_gBUILD_UtilitySavings__c.object-meta.xml
<CustomObject>
    <description>gBUILD Utility Savings: Information about energy savings.</description>
    <label>gBUILD Utility Saving</label>
    <nameField>
        <displayFormat>gbUs_{00000}</displayFormat>
        <label>PBSgBUILDUS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Utility Savings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>