force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/AnnualEnergyBaseline__c.field-meta.xml
<CustomField>
    <fullName>AnnualEnergyBaseline__c</fullName>
    <label>Annual Energy Baseline (Btu/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>