force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/AnnualWaterBaseline__c.field-meta.xml
<CustomField>
    <fullName>AnnualWaterBaseline__c</fullName>
    <label>Annual Water Baseline (Gallon/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>