force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/CalculatedSimplePaybackF__c.field-meta.xml
<CustomField>
    <fullName>CalculatedSimplePaybackF__c</fullName>
    <description>Calculated Simple Payback
if(isnull(TotAnnualCostSavF__c),null,nullvalue(EcmTotCost__c,1)/TotAnnualCostSavF__c)</description>
    <formula>EcmTotCost__c/TotAnnualCostSavF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total cost of the investment divided by the projected annual cash inflow.</inlineHelpText>
    <label>Calculated Simple Payback (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>