force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/EcmTotCost__c.field-meta.xml
<CustomField>
    <fullName>EcmTotCost__c</fullName>
    <description>ECM Total Cost</description>
    <label>ECM Total Cost ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>