force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/ElectricSav__c.field-meta.xml
<CustomField>
    <fullName>ElectricSav__c</fullName>
    <description>Electric Savings</description>
    <label>Annual Electric Savings (kwh/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>