force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/EnergyBaseline__c.field-meta.xml
<CustomField>
    <fullName>EnergyBaseline__c</fullName>
    <description>Energy Baseline</description>
    <inlineHelpText>Energy Baseline</inlineHelpText>
    <label>Energy Baseline (Btu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>