force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/FinanceContractorMarkup__c.field-meta.xml
<CustomField>
    <fullName>FinanceContractorMarkup__c</fullName>
    <description>Finance Contractor Markup</description>
    <label>Finance Contractor Markup (%)</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>