force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/ImplementationPrice__c.field-meta.xml
<CustomField>
    <fullName>ImplementationPrice__c</fullName>
    <description>Implementation Price</description>
    <label>Implementation Price ($) ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>