force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/ParentProjectBuilding__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectBuilding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project Building</label>
    <referenceTo>PBS_gBUILD_ProjectBuilding__c</referenceTo>
    <relationshipLabel>gBUILD Utility Savings</relationshipLabel>
    <relationshipName>gBUILD_Utility_Savings</relationshipName>
    <type>Lookup</type>
</CustomField>