force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/SourceOtherRelatedSav__c.field-meta.xml
<CustomField>
    <fullName>SourceOtherRelatedSav__c</fullName>
    <description>Source of Other Related Savings</description>
    <inlineHelpText>Please explain the source of other reported cost savings above.</inlineHelpText>
    <label>Source of Other Related Cost Savings</label>
    <length>50</length>
    <type>Text</type>
</CustomField>