force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>TimePeriod__c</fullName>
    <label>Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>