force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/TotAnnualCostSavF__c.field-meta.xml
<CustomField>
    <fullName>TotAnnualCostSavF__c</fullName>
    <description>Total Annual Cost Savings</description>
    <formula>TotAnnualEnergyCostSavCalculatedF__c+OtherRelatedCostSav__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Cost Savings ($/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>