force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/TotAnnualEnergyCostSavCalculatedF__c.field-meta.xml
<CustomField>
    <fullName>TotAnnualEnergyCostSavCalculatedF__c</fullName>
    <description>Calculated Total Annual Energy Cost Savings</description>
    <formula>if(TotEnergySavCalculated__c=0,
(TotEnergySavUserReported__c),
(TotEnergySavCalculated__c*1000000)
)*AverageBtuCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Calculated Cost Savings ($/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>