force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/TotEnergySavCalculated__c.field-meta.xml
<CustomField>
    <fullName>TotEnergySavCalculated__c</fullName>
    <description>Calculated Total Energy Savings (based on inputs) in mmBTUs/yr</description>
    <formula>if(0=(ChilledWaterSav__c * 12000) + (ElectricSav__c * 3412.142) + (GasSav__c * 1031) + (OilSav__c * 138700) + (SteamSav__c * 1000000) + OtherEnergySav__c, 
(TotEnergySavUserReported__c), 
(((ChilledWaterSav__c * 12000) + (ElectricSav__c * 3412.142) + (GasSav__c * 1031) + (OilSav__c * 138700) + (SteamSav__c * 1000000))+ OtherEnergySav__c))/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows total annual energy savings converted into mmBTUs/yr for all estimated Utility-Level savings reported above. Project teams can report savings in total or by utility. If Option A and Option B are both populated, Option A will be reported.</inlineHelpText>
    <label>Opt A:Calc.Tot.Energy Savings(mmBTUs/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>