force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/TotEnergySavUserReported__c.field-meta.xml
<CustomField>
    <fullName>TotEnergySavUserReported__c</fullName>
    <description>User Reported Total Energy Savings</description>
    <inlineHelpText>If estimated annual energy savings cannot be broken out by utility, leave all Annual Utility Savings fields (above) blank and enter a Total Annual Energy Savings in Btu/year. If Option A and Option B are both populated, Option A will be reported.</inlineHelpText>
    <label>Opt B: Reported Total Energy Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>