force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/fields/WaterSav__c.field-meta.xml
<CustomField>
    <fullName>WaterSav__c</fullName>
    <description>User Reported Total Energy Savings</description>
    <label>Water Savings (Gallons/yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>