force-app/main/default/objects/PBS_gBUILD_UtilitySavings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProjectId__c</columns>
    <columns>ChilledWaterSav__c</columns>
    <columns>ElectricSav__c</columns>
    <columns>GasSav__c</columns>
    <columns>OilSav__c</columns>
    <columns>SteamSav__c</columns>
    <columns>EcmTotCost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>